--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-and-time": "^2.4.2",
     "date-fn": "^0.0.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0",
-    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemailer-smtp-transport": "^2.4.2",
     "otp-generator": "^4.0.0",
     "otp-generators": "^1.0.3",
     "otplib": "^12.0.1",
