--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0",
     "nodemailer-smtp-transport": "^2.4.2",
