--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DOMAIN=https://hotelapi.wikitoria.in
-API_SERVER_IP=http://localhost
+API_SERVER_SSL_KEY_FILE=E://ReactProject//hotelApp//api//sslcert//key.pem
+API_SERVER_SSL_CERT_FILE=E://ReactProject//hotelApp//api//sslcert//cert.pem
+API_SERVER_IP=https://localhost
 API_HTTP_SERVER_PORT=80
 API_HTTPS_SERVER_PORT=443
 FRONTEND_SERVER_IP=http://localhost
