--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,15 @@ services:
     container_name: api_container
     build: .
     ports:
-      - 8000:8000
+      - 80:80
+      - 443:443
     depends_on:
       - mongo_db
     environment:
       - DOMAIN=https://hotelapi.wikitoria.in
       - API_SERVER_IP=http://20.219.3.91
-      - API_SERVER_PORT=8000
+      - API_HTTP_SERVER_PORT=80
+      - API_HTTPS_SERVER_PORT=443
       - FRONTEND_SERVER_IP=http://20.219.3.91
       - FRONTEND_SERVER_PORT=3000
       - ACCESS_TOKEN_SECRET=79929dab59c07b6b8a82b4d2805f725b65eb5cf5d7a55733d6fb4cf46bd589585ee120568a6d972019ac303e1e19268a4b5b8c9679da3ced537f64f764185406
