--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
     environment:
       - DOMAIN=https://hotelapi.wikitoria.in
       - API_SERVER_IP=http://20.219.3.91
-      - API_SERVER_SSL_KEY_FILE=.//sslcert//key.pem
-      - API_SERVER_SSL_CERT_FILE=.//sslcert//cert.pem
+      # - API_SERVER_SSL_KEY_FILE=.//sslcert//key.pem
+      # - API_SERVER_SSL_CERT_FILE=.//sslcert//cert.pem
+      - API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
+      - API_SERVER_SSL_CERT_FILE=.//sslcert//certificate.crt
       - API_HTTP_SERVER_PORT=80
       - API_HTTPS_SERVER_PORT=443
       - FRONTEND_SERVER_IP=http://20.219.3.91
