--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-and-time": "^2.4.2",
     "date-fn": "^0.0.2",
     "date-fns": "^2.29.3",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -38,6 +39,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/dialogflow-fulfillment": "^0.6.1",
     "nodemon": "^2.0.20"
   }
 }
