--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
 DOMAIN=https://hotelapi.wikitoria.in
-# API_SERVER_SSL_KEY_FILE=E://ReactProject//hotelApp//api//sslcert//key.pem
-# API_SERVER_SSL_CERT_FILE=E://ReactProject//hotelApp//api//sslcert//cert.pem
-API_SERVER_SSL_KEY_FILE=.//sslcert//key.pem
-API_SERVER_SSL_CERT_FILE=.//sslcert//cert.pem
-# API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
-# API_SERVER_SSL_CERT_FILE=.//sslcert//certificate.crt
+# API_SERVER_SSL_KEY_FILE=.//sslcert//key.pem
+# API_SERVER_SSL_CERT_FILE=.//sslcert//cert.pem
+API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
+API_SERVER_SSL_CERT_FILE=.//sslcert//certificate.crt
 API_SERVER_IP=https://localhost
 API_HTTP_SERVER_PORT=8000
 API_HTTPS_SERVER_PORT=443
