--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,10 @@ services:
     # depends_on:
     #   - mongo_db
     environment:
-      - DOMAIN=https://hotelapi.wikitoria.in
+      - DOMAIN=http://hotel.wikitoria.in
       - API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
       - API_SERVER_SSL_CERT_FILE=.//sslcert//certificate.crt
-      - API_SERVER_IP=http://20.219.3.91
+      - API_SERVER_IP=https://20.219.3.91
       # - API_HTTP_SERVER_PORT=80
       - API_HTTPS_SERVER_PORT=443
       - SOCKET_PORT=3001
