--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,17 @@ services:
     # depends_on:
     #   - mongo_db
     environment:
-      - DOMAIN=http://hotel.wikitoria.in
+      - API_DOMAIN=https://hotelapi.wikitoria.in
+      - FRONTEND_DOMAIN=http://hotel.wikitoria.in
       - API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
       - API_SERVER_SSL_CERT_FILE=.//sslcert//certificate.crt
-      - API_SERVER_IP=https://20.219.3.91
+      - API_SERVER_IP=https://43.239.110.22
       # - API_HTTP_SERVER_PORT=80
       - API_HTTPS_SERVER_PORT=443
       - SOCKET_PORT=3001
       - SOCKET_PRIVATE_KEY=abcd
       - SOCKET_PUBLIC_KEY=efgh
-      - FRONTEND_SERVER_IP=http://20.219.3.91
+      - FRONTEND_SERVER_IP=http://43.239.110.22
       - FRONTEND_SERVER_PORT=3000
       - ACCESS_TOKEN_SECRET=79929dab59c07b6b8a82b4d2805f725b65eb5cf5d7a55733d6fb4cf46bd589585ee120568a6d972019ac303e1e19268a4b5b8c9679da3ced537f64f764185406
       - REFRESH_TOKEN_SECRET=dded652ea31c8a34d294a24d715e79a9d44e74cb9c17fba822766c3408db046faa89ab8c94bbd67c1929f332c391eeba29016ea85355367e6860abaaed26d637
