--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
     environment:
       - API_DOMAIN=https://hotelapi.wikitoria.in
       - FRONTEND_DOMAIN=http://hotel.wikitoria.in
+      - GOOGLE_DOMAIN=https://google.com
+      - GOOGLE_CLOUD_DOMAIN=https://cloud.google.com
+      - GOOGLE_DIALOGFLOW_DOMAIN=https://dialogflow.cloud.google.com
       - API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
       - API_SERVER_SSL_CERT_FILE=.//sslcert//certificate.crt
       - API_SERVER_IP=43.239.110.22
