--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "google-spreadsheet": "^4.1.0",
+    "googleapis": "^126.0.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
