--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 443:443
     environment:
       - API_SERVER_DOMAIN=https://hotelapi.wikitoria.in
-      - API_SERVER_IP=43.239.110.22
+      # - API_SERVER_IP=43.239.110.22
       - API_SERVER_HTTPS_PORT=443
       - API_SERVER_HTTPS_PORT_ALTERNATIVE=3511
       - API_SERVER_SSL_KEY_FILE=.//sslcert//private.key
@@ -24,9 +24,10 @@ services:
       - SOCKET_PRIVATE_KEY=B8ADE1E5629BB6831F53B81563D65
       - SOCKET_PUBLIC_KEY=4178F9E811F8B456955EE574FEE8F
 
-      - FRONTEND_SERVER_DOMAIN=https://hotel.wikitoria.in:80
-      - FRONTEND_SERVER_IP=43.239.110.22
-      - FRONTEND_SERVER_PORT=3000
+      - FRONTEND_SERVER_DOMAIN=http://hotel.wikitoria.in:80
+      # - FRONTEND_SERVER_IP=43.239.110.22
+      # - FRONTEND_SERVER_PORT=3000
+      - FRONTEND_SERVER_URI=http://hotel.wikitoria.in
       
       - EMAIL_HOST=smtp.gmail.com
       - EMAIL_PORT=587
