--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "fs": "^0.0.1-security",
     "google-spreadsheet": "^4.1.0",
     "googleapis": "^126.0.1",
-    "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0",
     "nodemailer-smtp-transport": "^2.4.2",
+    "npm-check-updates": "^16.14.11",
     "otp-generator": "^4.0.0",
     "otp-generators": "^1.0.3",
     "otplib": "^12.0.1",
@@ -43,6 +43,6 @@
   },
   "devDependencies": {
     "@types/dialogflow-fulfillment": "^0.6.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   }
 }
