--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ACCESS_TOKEN_SECRET=79929dab59c07b6b8a82b4d2805f725b65eb5cf5d7a55733d6fb4cf46bd589585ee120568a6d972019ac303e1e19268a4b5b8c9679da3ced537f64f764185406
       - REFRESH_TOKEN_SECRET=dded652ea31c8a34d294a24d715e79a9d44e74cb9c17fba822766c3408db046faa89ab8c94bbd67c1929f332c391eeba29016ea85355367e6860abaaed26d637
 
-      - FRONTEND_SERVER_DOMAIN=http://hotel.wikitoria.in:80
+      # - FRONTEND_SERVER_DOMAIN=http://hotel.wikitoria.in:80
       - FRONTEND_SERVER_URI=http://hotel.wikitoria.in
       - FRONTEND_SERVER_PORT=3000
       
